# treenote

./: CMakeLists.txt  README.md
examples/: example.txt  helloerworld.txt  helloworld.txt  spacetest.txt  unicodetest.txt
src/: keys.hpp  note.cpp  note_edit_info.hpp  tree.cpp  tree_index.hpp  tree_op.h  utf8.cpp  window.cpp  window.h  window_detail.hpp  window_help.hpp
src/core/: buffer.cpp  buffer.hpp  cache.hpp  cursor.hpp  edit_info.hpp  editor.cpp  editor.hpp  legacy_tree_string.cpp  legacy_tree_string.hpp  table.hpp  tree.cpp  tree.hpp  tree_cmd.hpp  tree_index.hpp  tree_op.cpp  tree_op.hpp  tree_string.cpp  tree_string.hpp  utf8.cpp  utf8.hpp
src/treenote/: legacy_tree_string.cpp  legacy_tree_string.h  note.cpp  note.h  note_buffer.cpp  note_buffer.h  note_cache.hpp  note_cursor.hpp  note_edit_info.hpp  table.hpp  tree.cpp  tree.h  tree_cmd.hpp  tree_index.hpp  tree_op.cpp  tree_op.h  tree_string.cpp  tree_string.h  utf8.cpp  utf8.h
src/treenote_tui/: keymap.cpp  keymap.h  keys.hpp  main.cpp  read_helper.cpp  read_helper.h  strings.hpp  window.cpp  window.h  window_detail.hpp  window_help.hpp
src/tui/: keymap.cpp  keymap.hpp  main.cpp  read_helper.cpp  read_helper.hpp  strings.hpp  window.cpp  window.hpp  window_detail.hpp
